--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,7 @@
     "@angular/core": "12.1.2",
     "@angular/forms": "12.1.2",
     "@angular/http": "7.2.16",
-    "@angular/localize": "^12.1.2",
+    "@angular/localize": "^12.2.16",
     "@angular/platform-browser": "12.1.2",
     "@angular/platform-browser-dynamic": "12.1.2",
     "@angular/router": "12.1.2",
@@ -28,6 +28,7 @@
     "chart.js": "2.9.3",
     "clipboard": "2.0.6",
     "core-js": "3.15.2",
+    "dynamics.js": "^1.1.5",
     "ngx-avatar": "^4.1.0",
     "ngx-clipboard": "14.0.1",
     "ngx-toastr": "14.0.0",
